tests/integration/snapshots/player/integration__resize_stress_test__resize_stress_event_93_242x66.snap
---
source: tests/integration/resize_stress_test.rs
expression: content.clone()
---
⏺
     main

⏺
     (No content)



✻ Gusting…  thinking
